--- a/styles.css
+++ b/styles.css
@@ -257,7 +257,7 @@ padding-right: 40px;
 .modal-button{
     display: flex;
     position: relative;
-    bottom: -26.5px;
+    bottom: -40px;
     justify-content: center;
     align-items: center;
 }
@@ -297,7 +297,6 @@ padding-right: 40px;
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
-    
     align-items: center;
 }
 
@@ -463,16 +462,47 @@ padding-right: 40px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 16px;
 }
 
 .time-set{
     display: flex;
-    justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
+    justify-content: space-between;
+    width: 240px;
 }
-.setting-name{
-    margin-right: 30px;
+
+.modal-button{
+    
+    bottom: -10px;
+    
+}
+
+.font-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.font-text{
+    margin-bottom: 10px;
+
+}
+
+.color-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 10px;
+    align-items: center;
+}
+
+.color-text{
+    margin-bottom: 10px;
 }
 
 }
